--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@yayuyokitano/firefox-addon",
-  "version": "0.0.3",
+  "name": "@zerocity/firefox-addon",
+  "version": "0.0.1",
   "private": true,
   "description": "Github action to upload firefox addon",
   "main": "lib/main.js",
+  "source": "src/main.ts",
   "scripts": {
     "build": "tsc",
     "format": "prettier --write '**/*.ts'",
@@ -11,7 +12,7 @@
     "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
+    "all": "pnpm run build && pnpm run format && pnpm run lint && pnpm run package && pnpm test"
   },
   "repository": {
     "type": "git",
@@ -26,22 +27,22 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.0",
-    "axios": "^1.3.4",
+    "axios": "^1.4.0",
     "form-data": "^4.0.0"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.1",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.15.11",
-    "@typescript-eslint/parser": "^5.57.0",
+    "@typescript-eslint/parser": "^6.4.0",
     "@vercel/ncc": "^0.36.1",
-    "eslint": "^8.37.0",
-    "eslint-plugin-github": "^4.7.0",
-    "eslint-plugin-jest": "^27.2.1",
-    "jest": "^27.2.5",
+    "eslint": "^8.47.0",
+    "eslint-plugin-github": "^4.9.2",
+    "eslint-plugin-jest": "^27.2.3",
+    "jest": "^29.6.2",
     "js-yaml": "^4.1.0",
-    "jsonwebtoken": "^9.0.0",
-    "prettier": "2.8.7",
-    "ts-jest": "^27.1.2",
-    "typescript": "^4.9.5"
+    "jsonwebtoken": "^9.0.1",
+    "prettier": "3.0.1",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.1.6"
   }
 }
