--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "form-data": "^4.0.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.6.2",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.15.11",
     "@typescript-eslint/parser": "^6.4.0",
